third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/table/redefine-1.stderr
TOML parse error at line 5, column 1
  |
5 | [a.b]
  | ^
invalid table header
duplicate key `b` in table `a`
